# envsync

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
envsync/: main.py
envsync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
