[project]
name = "envsync"
version = "0.1.0"
description = "A CLI tool to manage and synchronize .env files."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Kamil Kazi", email = "kazi.kamil13@gmail.com" }
]
dependencies = [
  "typer>=0.9.0",
]

[project.scripts]
envsync = "envsync.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
